build: added jitpack yml

--- a/pena/build.gradle
+++ b/pena/build.gradle
@@ -57,3 +57,17 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 }
+
+afterEvaluate {
+    publishing {
+        publications {
+            release(MavenPublication) {
+                from components.release
+
+                groupId = 'dev.privyid'
+                artifactId = 'pena-android'
+                version = '0.1.0'
+            }
+        }
+    }
+}
