--- a/pena/build.gradle
+++ b/pena/build.gradle
@@ -5,7 +5,7 @@ plugins {
 }
 
 android {
-    namespace 'dev.privyid'
+    namespace 'dev.privyid.pena'
     compileSdk 33
 
     defaultConfig {
@@ -64,9 +64,9 @@ afterEvaluate {
             release(MavenPublication) {
                 from components.release
 
-                groupId = 'dev.privyid'
+                groupId = 'dev.privyid.pena'
                 artifactId = 'pena-android'
-                version = '0.1.0'
+                version = '0.2.0'
             }
         }
     }
