--- a/jitpack.yml
+++ b/jitpack.yml
@@ -1,4 +1,5 @@
 jdk:
   - openjdk20
 before_install:
-  - ./scripts/prepareJitpackEnvironment.sh
+  - sdk install java 20-open
+  - sdk use java 20-open
